--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pandas = "^2.2.3"
 polars = "^1.12.0"
 numpy = "^2.1.3"
 plotly = "^5.24.1"
+seaborn = "^0.13.2"
 
 
 [tool.poetry.group.dev.dependencies]
