--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,14 @@ polars = "^1.12.0"
 numpy = "^2.1.3"
 plotly = "^5.24.1"
 seaborn = "^0.13.2"
+boto3 = "^1.35.56"
+streamlit = "^1.40.0"
+fastapi = {extras = ["standard"], version = "^0.115.4"}
+mlflow = "^2.17.2"
+scikit-learn = "^1.5.2"
+gunicorn = "^23.0.0"
+uvicorn = "^0.32.0"
+pydantic = "^2.9.2"
 
 
 [tool.poetry.group.dev.dependencies]
