--- a/training/config.yaml
+++ b/training/config.yaml
@@ -1,4 +1,11 @@
 data:
   raw_data_path: "data/raw/en.openfoodfacts.org.products.csv.gz"
   processed_data_path: "data/processed/processed_dataset.csv"
-  
+  clean_data_path: "data/processed/clean_dataset.csv"
+  production_data_path: "data/production/database.csv"
+training:
+  mlflow_experiment_name: "foodstuffs-recommendation"
+  mlflow_tracking_uri: "https://mlflow.luciole.dev"
+  mlflow_model_name: "kmeans"
+  encoding_method_name: "svd" # [svd, pca]
+  n_clusters: 525
