--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -61,7 +61,7 @@ RUN apt-get update && apt-get install -y curl & apt-get clean
 
 COPY ./dashboard /app
 
-CMD streamlit run src/streamlit_app.py --server.port $PORT --server.address=0.0.0.0
+CMD streamlit run streamlit_app.py --server.port $PORT --server.address=0.0.0.0
 
 
 FROM python:3.12.7-slim-bookworm AS api
@@ -80,4 +80,4 @@ RUN apt-get update & apt-get clean
 
 COPY ./api /app
 
-CMD uvicorn src.main:app --host 0.0.0.0 --port $PORT
+CMD uvicorn main:app --host 0.0.0.0 --port $PORT
