--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     volumes:
       - ./api:/app
       - ./data:/app/data
+      - ./db:/app/db
     command: uvicorn main:app --host 0.0.0.0 --port 8881 --reload
     ports:
       - "8881:8881"
