--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ gunicorn = "^23.0.0"
 uvicorn = "^0.32.0"
 pydantic = "^2.9.2"
 spacy = "^3.7.5"
+sqlalchemy = "^2.0.36"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.5"
