--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,3 +1,6 @@
+###############################################################################
+# builder
+###############################################################################
 FROM python:3.12.7-slim-bookworm AS builder
 
 RUN pip install poetry==1.8.4
@@ -48,6 +51,9 @@ CMD mlflow server --port $PORT \
     --default-artifact-root $AWS_ARTIFACT_S3_URI
 
 
+###############################################################################
+# dashboard
+###############################################################################
 FROM python:3.12.7-slim-bookworm AS dashboard
 
 WORKDIR /app
@@ -60,11 +66,13 @@ COPY --from=builder ${VIRTUAL_ENV} ${VIRTUAL_ENV}
 RUN apt-get update && apt-get install -y curl & apt-get clean
 
 COPY ./dashboard /app
-COPY ./data/production/database.csv /app/data/production/database.csv
+COPY ./data/production/database_text_api.csv /app/data/production/database_text_api.csv
 
 CMD streamlit run streamlit_app.py --server.port $PORT --server.address=0.0.0.0
 
-
+###############################################################################
+# api
+###############################################################################
 FROM python:3.12.7-slim-bookworm AS api
 
 ENV MLFLOW_TRACKING_URI=$MLFLOW_TRACKING_URI
@@ -80,11 +88,13 @@ COPY --from=builder ${VIRTUAL_ENV} ${VIRTUAL_ENV}
 RUN apt-get update & apt-get clean
 
 COPY ./api /app
-COPY ./data/production /app/data/production
-COPY ./db /app/db
+COPY ./data/production/database_text_api.csv /app/data/production/database_text_api.csv
 
 CMD uvicorn main:app --host 0.0.0.0 --port $PORT --timeout-keep-alive 90
 
+###############################################################################
+# python-cli
+###############################################################################
 FROM python:3.12.7-slim-bookworm AS python-cli
 
 WORKDIR /app
@@ -100,10 +110,12 @@ ENV VIRTUAL_ENV=/venv/.venv \
 COPY --from=builder ${VIRTUAL_ENV} ${VIRTUAL_ENV}
 
 COPY Makefile /app
-# COPY ./data /app/data
 
 CMD ["bash"]
 
+###############################################################################
+# python-cli-3.8
+###############################################################################
 FROM python:3.8.20-slim-bullseye AS python-cli-3.8
 
 WORKDIR /app
@@ -111,11 +123,9 @@ WORKDIR /app
 RUN apt-get update && apt-get install -y make && apt install -y libusb-1.0-0
 
 COPY ./docker/requirements.txt .
-# COPY ./data /app/data
 
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY Makefile /app
-# COPY ./data/production /app/data/production
 
 CMD ["bash"]
