--- a/training/config.yaml
+++ b/training/config.yaml
@@ -5,7 +5,9 @@ data:
   clean_data_with_embed: "data/clean_dataset_with_embeddings.csv"
   data_with_clusters: "data/clean_dataset_clusters.csv"
   production_data_path: "data/production/database.csv"
+  production_categorical_features_data_path: "data/production/categorical_features.csv"
   production_encoded_features_path: "data/production/production_encoded_features.csv"
+  production_text_data_api_path: "data/production/database_text_api.csv"
   images_path: "data/product_images"
   image_url_column: "image_url"
   code_column: "code"
