--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,6 @@ services:
     volumes:
       - ./api:/app
       - ./data:/app/data
-      - ./db:/app/db
     command: uvicorn main:app --host 0.0.0.0 --port 8881 --reload
     ports:
       - "8881:8881"
@@ -68,6 +67,17 @@ services:
       context: .
       dockerfile: ./docker/Dockerfile
       target: python-cli-3.8
+    volumes:
+      - .:/app
+    stdin_open: true
+    tty: true
+
+  python-gpu-cli-3.8:
+    container_name: python-gpu-cli-3.8
+    build:
+      context: .
+      dockerfile: ./docker/Dockerfile
+      target: python-gpu-cli-3.8
     volumes:
       - .:/app
     stdin_open: true
